[workspace]

resolver = "2"
members = ["clap_config"]

[workspace.package]
license = "MIT OR Apache-2.0"

# Don't allow publishing for now to prevent accidentally publishing to crates.io.
publish = false

keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-utilities"]

edition = "2021"
repository = "https://github.com/gibfahn/clap_config"
readme = "README.md"
authors = ["Gibson Fahnestock <gibfahn@gmail.com>"]
