# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "clap_config"
version = "0.1.0"

license.workspace=true
publish.workspace=true
keywords.workspace=true
categories.workspace=true
edition.workspace=true
repository.workspace=true
readme.workspace=true
authors.workspace=true

exclude = ["tests/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.71"
quote = "1.0.33"
syn = { version = "2.0.42", features = ["full"] } # Add "extra-traits" feature to debug.
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "string", "wrap_help"] }
color-eyre = "0.6.2"
serde_json = "1.0.108"
serde_yaml = "0.9.29"
