# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "clap_config"
version = "0.1.1"
description = "Automatically merge CLI args, environment variables, config files, and default values in clap apps."

license.workspace = true
publish.workspace = true
keywords.workspace = true
categories.workspace = true
edition.workspace = true
repository.workspace = true
readme.workspace = true
authors.workspace = true

exclude = ["tests/"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = [
  "full",
  # "extra-traits", # Uncomment to debug syn.
] }
serde = { version = "1.0.217", features = ["derive"] }
clap = { version = "4.5.27", features = [
  "derive",
  "env",
  "string",
  "wrap_help",
] }
heck = "0.5.0"

[dev-dependencies]
color-eyre = "0.6.3"
serde_json = "1.0.137"
serde_yaml = "0.9.34"
pretty_assertions = "1.4.1"
const_format = "0.2.34"
bytesize = { version = "1.3.0", features = ["serde"] }
